--- a/thesis.tex
+++ b/thesis.tex
@@ -1,14 +1,29 @@
 \documentclass{ruthesis}
 \special{papersize=8.5in,11in} % for A4-default configurations on servers
+
+\usepackage{geometry}
+\geometry{
+letterpaper,
+left=1.5in,
+right=1in,
+top=1in,
+bottom=1in
+}
+
 \begin{document}
 \phd
 
-\title{The title of my thesis}
-\author{The author of my thesis}
-\program{Computer Science}
-\director{The principal advisor's name}
+% if to include, 
+\copyrightpage
+\tablespage
+\figurespage
+
+\title{[INSERT TITLE OF DOCTORAL DISSERTATION]}
+\author{[INSERT AUTHOR'S NAME]}
+\program{[insert your graduate program's official name]}
+\director{[insert Dissertation Director's name]}
 \approvals{4}
-\submissionyear{2017}
+\submissionyear{2022}
 \submissionmonth{May}
 
 \abstract{This is the abstract}
@@ -25,18 +40,9 @@ Here is the introduction.
 \section{Another section}
 \subsection{A subsection}
 
-\begin{vita}
-\heading{The author of my thesis} \vspace{15pt}
-% Colleges attended, with dates, subjects, degrees
-\begin{descriptionlist}{xxxxx-xxxxx} % reverse chronological order
-\item[200x] Ph. D. in Computer Science, Rutgers University
-\item[200x-0x] B. Sc. in Computer Science from some University
-\item[200x] Graduated from such and such high school.
-\end{descriptionlist}
-\medskip
-\begin{descriptionlist}{xxxxx-xxxxx} %positions held since BS degree
-\item[200x-200y] Teaching assistant, Department of Computer Science, Rutgers University
-\end{descriptionlist}
-\end{vita}
+\appendix
+
+\bibliographystyle{apalike}
+\bibliography{bib}
 
 \end{document}
